# clife

./: .gitignore  CMakeLists.txt  build_script
include/: clife_game.h
src/: clife_game.c
tests/: CMakeLists.txt
tests/interface/: deserialise.c  get_cell.c  set_cell.c  step.c
tests/smoke/: allocation.c
tests/unit/: serialise.c
tests/utils/: test_utils.c
